// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Edit mode component edit mode make snapshot 1`] = `
<body
  style=""
>
  <div>
    <form
      action="#"
      style="width: 100%; max-width: 300px;"
    >
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="firstName"
        >
          First name
        </label>
        <input
          class="css-1pabijg"
          id="firstName"
          name="firstName"
          type="text"
          value="Vadym"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="lastName"
        >
          Last name
        </label>
        <input
          class="css-1pabijg"
          id="lastName"
          name="lastName"
          type="text"
          value="Samitashvili"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="email"
        >
          Email
        </label>
        <input
          class="css-1pabijg"
          id="email"
          name="email"
          type="text"
          value="totalgol2015@gmail.com"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <button
        class="css-1pohnbb"
        color="secondary"
        style="margin-bottom: 1rem;"
        type="button"
      >
        Change password
      </button>
      <div
        class="css-1ijwswz"
      >
        <button
          class="css-1lrm4sh"
          color="success"
          disabled=""
          type="submit"
        >
          Save
        </button>
        <button
          class="css-3mo4ai"
          color="error"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
  <div>
    <form
      action="#"
      style="width: 100%; max-width: 300px;"
    >
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="firstName"
        >
          First name
        </label>
        <input
          class="css-1pabijg"
          id="firstName"
          name="firstName"
          type="text"
          value="Vadym"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="lastName"
        >
          Last name
        </label>
        <input
          class="css-1pabijg"
          id="lastName"
          name="lastName"
          type="text"
          value="Samitashvili"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="email"
        >
          Email
        </label>
        <input
          class="css-1pabijg"
          id="email"
          name="email"
          type="text"
          value="totalgol2015@gmail.com"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <button
        class="css-1pohnbb"
        color="secondary"
        style="margin-bottom: 1rem;"
        type="button"
      >
        Change password
      </button>
      <div
        class="css-1ijwswz"
      >
        <button
          class="css-1lrm4sh"
          color="success"
          disabled=""
          type="submit"
        >
          Save
        </button>
        <button
          class="css-3mo4ai"
          color="error"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</body>
`;

exports[`Edit mode component regular mode make snapshot 1`] = `
<body>
  <div>
    <form
      action="#"
      style="width: 100%; max-width: 300px;"
    >
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="firstName"
        >
          First name
        </label>
        <input
          class="css-1pabijg"
          disabled=""
          id="firstName"
          name="firstName"
          type="text"
          value="Vadym"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="lastName"
        >
          Last name
        </label>
        <input
          class="css-1pabijg"
          disabled=""
          id="lastName"
          name="lastName"
          type="text"
          value="Samitashvili"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="email"
        >
          Email
        </label>
        <input
          class="css-1pabijg"
          disabled=""
          id="email"
          name="email"
          type="text"
          value="totalgol2015@gmail.com"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <button
        class="css-1pohnbb"
        color="secondary"
        style="margin-bottom: 1rem;"
        type="button"
      >
        Change password
      </button>
      <div
        class="css-1ijwswz"
      >
        <button
          class="css-2thluw"
          color="primary"
          type="button"
        >
          Edit
        </button>
      </div>
    </form>
  </div>
  <div>
    <form
      action="#"
      style="width: 100%; max-width: 300px;"
    >
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="firstName"
        >
          First name
        </label>
        <input
          class="css-1pabijg"
          disabled=""
          id="firstName"
          name="firstName"
          type="text"
          value="Vadym"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="lastName"
        >
          Last name
        </label>
        <input
          class="css-1pabijg"
          disabled=""
          id="lastName"
          name="lastName"
          type="text"
          value="Samitashvili"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <div
        class="css-acwcvw"
      >
        <label
          class="css-zkehil"
          for="email"
        >
          Email
        </label>
        <input
          class="css-1pabijg"
          disabled=""
          id="email"
          name="email"
          type="text"
          value="totalgol2015@gmail.com"
        />
        <p
          class="css-1ghz2lr"
        />
      </div>
      <button
        class="css-1pohnbb"
        color="secondary"
        style="margin-bottom: 1rem;"
        type="button"
      >
        Change password
      </button>
      <div
        class="css-1ijwswz"
      >
        <button
          class="css-2thluw"
          color="primary"
          type="button"
        >
          Edit
        </button>
      </div>
    </form>
  </div>
</body>
`;
